Cleanup: Move everything to Core, update license to CC0, simplify project structure

--- a/Core/release.yml
+++ b/Core/release.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Fetch all history for all tags and branches
+          fetch-depth: 0
           
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -35,7 +35,6 @@ jobs:
           files: |
             dist/*.whl
             dist/*.tar.gz
-          body_path: ${{ github.workspace }}/CHANGELOG.md
           
       - name: Upload to PyPI
         env:
