--- a/journals/NathanielBranden.yaml
+++ b/journals/NathanielBranden.yaml
@@ -1,26 +1,10 @@
-exercises:
-  - name: "Morning Check-in"
-    type: "custom"
-    time: "morning"
-    stems:
-      - "This morning I feel..."
-      - "Today I want to..."
-      - "I am grateful for..."
-      - "I am looking forward to..."
-      - "I am concerned about..."
-      - "I will focus on..."
+name: "Nathaniel Branden - Sentence Completion Exercises from the Six Pillars of Self Esteem"
+description: "30-week program based on Nathaniel Branden's sentence completion exercises for personal growth and self-awareness"
+type: "branden"
+total_weeks: 30
+stems_per_day: 6
 
-  - name: "Afternoon Reflection"
-    type: "custom"
-    time: "afternoon"
-    stems:
-      - "Right now I feel..."
-      - "Today I accomplished..."
-      - "I am learning..."
-      - "I am grateful for..."
-      - "Tomorrow I will..."
-      - "I am becoming..."
-
+weeks:
   - week: 1
     stems:
       - "Right now I am aware..."
@@ -29,7 +13,7 @@ exercises:
       - "I want to be aware..."
       - "I am afraid to be aware..."
       - "I am excited to be aware..."
-
+  
   - week: 2
     stems:
       - "I am responsible for..."
@@ -38,7 +22,7 @@ exercises:
       - "I am afraid to be responsible for..."
       - "I am excited to be responsible for..."
       - "I am becoming responsible for..."
-
+  
   - week: 3
     stems:
       - "When I am with people..."
@@ -47,7 +31,7 @@ exercises:
       - "I am afraid people will..."
       - "I am excited when people..."
       - "I am becoming with people..."
-
+  
   - week: 4
     stems:
       - "When I feel energetic..."
@@ -56,7 +40,7 @@ exercises:
       - "I am afraid to feel..."
       - "I am excited to feel..."
       - "I am becoming energetic when..."
-
+  
   - week: 5
     stems:
       - "When I make choices..."
@@ -65,7 +49,7 @@ exercises:
       - "I am afraid to choose..."
       - "I am excited to choose..."
       - "I am becoming in my choices..."
-
+  
   - week: 6
     stems:
       - "When I feel happy..."
@@ -74,7 +58,7 @@ exercises:
       - "I am afraid to feel..."
       - "I am excited to feel..."
       - "I am becoming with my feelings..."
-
+  
   - week: 7
     stems:
       - "When I think clearly..."
@@ -83,7 +67,7 @@ exercises:
       - "I am afraid to think..."
       - "I am excited to think..."
       - "I am becoming in my thoughts..."
-
+  
   - week: 8
     stems:
       - "When I act decisively..."
@@ -92,7 +76,7 @@ exercises:
       - "I am afraid to act..."
       - "I am excited to act..."
       - "I am becoming in my actions..."
-
+  
   - week: 9
     stems:
       - "What I value most is..."
@@ -101,7 +85,7 @@ exercises:
       - "I am afraid to value..."
       - "I am excited to value..."
       - "I am becoming in my values..."
-
+  
   - week: 10
     stems:
       - "My goals are..."
@@ -110,7 +94,7 @@ exercises:
       - "I am afraid my goals will..."
       - "I am excited my goals will..."
       - "I am becoming with my goals..."
-
+  
   - week: 11
     stems:
       - "Success to me is..."
@@ -119,7 +103,7 @@ exercises:
       - "I am afraid success will..."
       - "I am excited success will..."
       - "I am becoming successful when..."
-
+  
   - week: 12
     stems:
       - "When I fail..."
@@ -128,7 +112,7 @@ exercises:
       - "I am afraid to fail..."
       - "I am excited to fail..."
       - "I am becoming with failure..."
-
+  
   - week: 13
     stems:
       - "When things change..."
@@ -137,7 +121,7 @@ exercises:
       - "I am afraid things will change..."
       - "I am excited things will change..."
       - "I am becoming with change..."
-
+  
   - week: 14
     stems:
       - "When I grow..."
@@ -146,7 +130,7 @@ exercises:
       - "I am afraid to grow..."
       - "I am excited to grow..."
       - "I am becoming in my growth..."
-
+  
   - week: 15
     stems:
       - "When I learn..."
@@ -155,7 +139,7 @@ exercises:
       - "I am afraid to learn..."
       - "I am excited to learn..."
       - "I am becoming in my learning..."
-
+  
   - week: 16
     stems:
       - "When I am creative..."
@@ -164,7 +148,7 @@ exercises:
       - "I am afraid to be creative..."
       - "I am excited to be creative..."
       - "I am becoming creative when..."
-
+  
   - week: 17
     stems:
       - "When I love..."
@@ -173,7 +157,7 @@ exercises:
       - "I am afraid to love..."
       - "I am excited to love..."
       - "I am becoming in love..."
-
+  
   - week: 18
     stems:
       - "When I accept myself..."
@@ -182,7 +166,7 @@ exercises:
       - "I am afraid to accept myself..."
       - "I am excited to accept myself..."
       - "I am becoming in self-acceptance..."
-
+  
   - week: 19
     stems:
       - "When I forgive..."
@@ -191,7 +175,7 @@ exercises:
       - "I am afraid to forgive..."
       - "I am excited to forgive..."
       - "I am becoming in forgiveness..."
-
+  
   - week: 20
     stems:
       - "When I am grateful..."
@@ -200,7 +184,7 @@ exercises:
       - "I am afraid to be grateful..."
       - "I am excited to be grateful..."
       - "I am becoming grateful when..."
-
+  
   - week: 21
     stems:
       - "When I am courageous..."
@@ -209,7 +193,7 @@ exercises:
       - "I am afraid to be courageous..."
       - "I am excited to be courageous..."
       - "I am becoming courageous when..."
-
+  
   - week: 22
     stems:
       - "When I am honest..."
@@ -218,7 +202,7 @@ exercises:
       - "I am afraid to be honest..."
       - "I am excited to be honest..."
       - "I am becoming honest when..."
-
+  
   - week: 23
     stems:
       - "When I have integrity..."
@@ -227,7 +211,7 @@ exercises:
       - "I am afraid to have integrity..."
       - "I am excited to have integrity..."
       - "I am becoming in integrity..."
-
+  
   - week: 24
     stems:
       - "When I trust..."
@@ -236,7 +220,7 @@ exercises:
       - "I am afraid to trust..."
       - "I am excited to trust..."
       - "I am becoming in trust..."
-
+  
   - week: 25
     stems:
       - "When I have faith..."
@@ -245,7 +229,7 @@ exercises:
       - "I am afraid to have faith..."
       - "I am excited to have faith..."
       - "I am becoming in faith..."
-
+  
   - week: 26
     stems:
       - "When I have hope..."
@@ -254,7 +238,7 @@ exercises:
       - "I am afraid to have hope..."
       - "I am excited to have hope..."
       - "I am becoming hopeful when..."
-
+  
   - week: 27
     stems:
       - "When I feel joy..."
@@ -263,7 +247,7 @@ exercises:
       - "I am afraid to feel joy..."
       - "I am excited to feel joy..."
       - "I am becoming joyful when..."
-
+  
   - week: 28
     stems:
       - "When I feel peaceful..."
@@ -272,7 +256,7 @@ exercises:
       - "I am afraid to feel peaceful..."
       - "I am excited to feel peaceful..."
       - "I am becoming peaceful when..."
-
+  
   - week: 29
     stems:
       - "When I am wise..."
@@ -281,7 +265,7 @@ exercises:
       - "I am afraid to be wise..."
       - "I am excited to be wise..."
       - "I am becoming wise when..."
-
+  
   - week: 30
     stems:
       - "When I feel whole..."
